ASM (org.eclipse.persistence.asm implementation) removal (#2008)
Signed-off-by: Radek Felcman <radek.felcman@seznam.cz>